src/test/ui/feature-gates/feature-gate-extern_prelude.stderr
error: expected item, found `can`
  --> $DIR/feature-gate-extern_prelude.rs:1:1
   |
LL | can-only-test-this-in-run-make-fulldeps
   | ^^^ expected item

error: aborting due to previous error

